hphp/test/zend/good/Zend/tests/bug63173.php.expectf

Fatal error: Invalid callable (array) in %s/bug63173.php on line 5
